--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 </head>
 <body>
     <header>
-        <h1>Jaishak</h1>
+        <h1>Jaishak J</h1>
         <p>Flexible and Enthusiastic Student | AI & ML Developer</p>
     </header>
 
