--- a/index.html
+++ b/index.html
@@ -212,19 +212,17 @@
 
     <main class="main-content">
         <header class="header" id="home">
-            <h1>Jaishak</h1>
-            <p>Flexible and Enthusiastic Student | AI & ML Developer</p>
+            <h1>Jaishak J</h1>
+            <p>Adaptable and Passionate Learner | AI & ML Developer | Data Scientist</p>
         </header>
 
         <section class="section" id="skills">
             <h2>✨ Skills</h2>
             <div class="skills-grid">
-                <div class="skill-item">Python, Java, SQL, C++</div>
+                <div class="skill-item">Python | Java | SQL | C++</div>
                 <div class="skill-item">AI & ML Model Development</div>
                 <div class="skill-item">Problem-Solving</div>
                 <div class="skill-item">Linux</div>
-                <div class="skill-item">Content Writing</div>
-                <div class="skill-item">Affiliate Marketing</div>
             </div>
         </section>
 
