--- a/index.html
+++ b/index.html
@@ -16,60 +16,227 @@
             --gradient-end: #FBE4D8;
         }
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: var(--bg-primary);
-            color: var(--text-primary);
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: var(--bg-primary);
+            color: var(--text-primary);
+            min-height: 100vh;
         }
 
         .nav-bar {
-            display: flex;
-            justify-content: space-between;
-            padding: 1rem 2rem;
+            position: fixed;
+            left: 0;
+            top: 0;
+            height: 100vh;
+            width: 80px;
             background: var(--bg-secondary);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 2rem 0;
+            z-index: 100;
+        }
+
+        .nav-bar a {
+            color: var(--text-secondary);
+            margin: 1rem 0;
+            font-size: 1.5rem;
+            transition: color 0.3s;
+        }
+
+        .nav-bar a:hover {
+            color: var(--accent);
+        }
+
+        .main-content {
+            margin-left: 80px;
+            padding: 2rem 4rem;
         }
 
         .header {
-            text-align: center;
-            padding: 4rem 0;
+            padding: 2rem 0;
             position: relative;
+            overflow: hidden;
         }
 
+        .header h1 {
+            font-size: 4rem;
+            font-weight: 700;
+            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 1rem;
+        }
+
+        /* Enhanced Clock Design */
         .clock-container {
             position: absolute;
             top: 20px;
             right: 40px;
             background: rgba(255, 255, 255, 0.1);
-            padding: 1rem 2rem;
-            border-radius: 15px;
-            backdrop-filter: blur(5px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            padding: 1.5rem 2.5rem;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            border: 2px solid rgba(255, 255, 255, 0.15);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
         }
 
         #live-clock {
-            font-size: 1.2rem;
-            font-weight: 500;
+            font-size: 1.4rem;
+            font-weight: 600;
             color: var(--text-primary);
+            text-align: center;
+            line-height: 1.8;
+            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         .section {
-            padding: 3rem 2rem;
-            text-align: center;
+            background: var(--bg-secondary);
+            border-radius: 20px;
+            padding: 2rem;
+            margin: 2rem 0;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
-        .footer {
-            text-align: center;
+        .section h2 {
+            color: var(--text-primary);
+            font-size: 1.8rem;
+            margin-bottom: 1.5rem;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 1rem;
+        }
+
+        .skill-item {
+            background: rgba(255, 255, 255, 0.05);
             padding: 1rem;
-            background: var(--bg-secondary);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: transform 0.3s, background 0.3s;
+        }
+
+        .skill-item:hover {
+            transform: translateY(-5px);
+            background: rgba(255, 255, 255, 0.08);
+        }
+
+        .experience-item {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 1.5rem;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .experience-item h3 {
+            color: var(--accent);
+            margin-bottom: 0.5rem;
+        }
+
+        .experience-item p {
+            color: var(--text-secondary);
+        }
+
+        .experience-item ul {
+            list-style: none;
+            margin-top: 0.5rem;
+            color: var(--text-secondary);
+        }
+
+        .experience-item ul li {
+            margin-left: 1rem;
+            position: relative;
+            padding: 0.25rem 0;
+        }
+
+        .experience-item ul li::before {
+            content: "•";
+            color: var(--accent);
+            position: absolute;
+            left: -1rem;
+        }
+
+        .contact-info {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+        }
+
+        .contact-item {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 1rem;
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            transition: transform 0.3s, background 0.3s;
+        }
+
+        .contact-item:hover {
+            transform: translateY(-3px);
+            background: rgba(255, 255, 255, 0.08);
+        }
+
+        .contact-item span {
+            font-size: 1.5rem;
+        }
+
+        .contact-item a {
+            color: var(--text-primary);
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .contact-item a:hover {
+            color: var(--accent);
+        }
+
+        .contact-item p {
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+        }
+
+        @media (max-width: 768px) {
+            .nav-bar {
+                width: 60px;
+            }
+            .main-content {
+                margin-left: 60px;
+                padding: 2rem;
+            }
+            .header h1 {
+                font-size: 3rem;
+            }
+            .clock-container {
+                right: 20px;
+                padding: 1rem 2rem;
+            }
+            #live-clock {
+                font-size: 1.1rem;
+            }
         }
     </style>
 </head>
 <body>
     <nav class="nav-bar">
-        <div>Logo</div>
-        <div>Menu</div>
+        <a href="#home">🏠</a>
+        <a href="#skills">💡</a>
+        <a href="#experience">💼</a>
+        <a href="#education">🎓</a>
+        <a href="#contact">📧</a>
     </nav>
 
     <main class="main-content">
@@ -81,25 +248,77 @@
             <p>Adaptable and Passionate Learner | AI & ML Developer | Data Scientist</p>
         </header>
 
-        <section class="section" id="about">
-            <h2>About Me</h2>
-            <p>Enthusiastic AI and ML developer with a strong passion for innovation.</p>
+        <section class="section" id="skills">
+            <h2>✨ Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-item">Python | Java | SQL | C++</div>
+                <div class="skill-item">AI & ML Model Development</div>
+                <div class="skill-item">Problem-Solving</div>
+                <div class="skill-item">Linux</div>
+            </div>
         </section>
 
-        <section class="section" id="projects">
-            <h2>Projects</h2>
-            <p>Details of my AI and ML projects will be displayed here.</p>
+        <section class="section" id="experience">
+            <h2>💼 Experience</h2>
+            <div class="experience-item">
+                <h3>Accenture - The Forage</h3>
+                <p>Data Analytics and Visualization Virtual Experience Program</p>
+                <ul>
+                    <li>Data Preprocessing</li>
+                    <li>Data Modeling</li>
+                    <li>Model Presentation</li>
+                </ul>
+            </div>
+            <div class="experience-item">
+                <h3>Retech Solution Pvt Ltd</h3>
+                <p>Machine Learning Intern</p>
+                <ul>
+                    <li>Foundations of Machine Learning</li>
+                    <li>Supervised and Unsupervised Learning</li>
+                    <li>Neural Networks</li>
+                    <li>Advanced Topics in ML</li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="section" id="education">
+            <h2>🎓 Education</h2>
+            <div class="experience-item">
+                <h3>Bachelor of Technology (2021-2025)</h3>
+                <p>Jeppiaar Institute of Technology, Artificial Intelligence and Data Science</p>
+            </div>
+            <div class="experience-item">
+                <h3>Higher Secondary School (2020-2021)</h3>
+                <p>Pius XI HSC, Thoothoor - 71% scored</p>
+            </div>
+            <div class="experience-item">
+                <h3>Secondary School (2018-2019)</h3>
+                <p>St. Joseph High School, Karunyapuram - 68% scored</p>
+            </div>
         </section>
 
         <section class="section" id="contact">
-            <h2>Contact</h2>
-            <p>Reach out to me at: jaishak@example.com</p>
+            <h2>📧 Contact</h2>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <span>📱</span>
+                    <a href="tel:+919345589347">+91 9345589347</a>
+                </div>
+                <div class="contact-item">
+                    <span>📧</span>
+                    <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <span>📍</span>
+                    <p>Poothurai, Vilavancode, Kanniyakumari, 629176</p>
+                </div>
+                <div class="contact-item">
+                    <span>💼</span>
+                    <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedin.com/in/jaishakj</a>
+                </div>
+            </div>
         </section>
     </main>
-
-    <footer class="footer">
-        <p>&copy; 2025 Jaishak. All rights reserved.</p>
-    </footer>
 
     <script>
         function updateClock() {
