--- a/index.html
+++ b/index.html
@@ -1,357 +1,293 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaishak's Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --bg-primary: #190019;
-            --bg-secondary: #2B124C;
-            --text-primary: #DFB6B2;
-            --text-secondary: #FBE4D8;
-            --accent: #6C4675;
-            --gradient-start: #DFB6B2;
-            --gradient-end: #FBE4D8;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jaishak's Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <style>
+    :root {
+      --bg-primary: #190019;
+      --bg-secondary: #2B124C;
+      --text-primary: #DFB6B2;
+      --text-secondary: #FBE4D8;
+      --accent: #6C4675;
+      --gradient-start: #DFB6B2;
+      --gradient-end: #FBE4D8;
+    }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: var(--bg-primary);
-            color: var(--text-primary);
-            min-height: 100vh;
-        }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: var(--bg-primary);
+      color: var(--text-primary);
+      min-height: 100vh;
+    }
 
-        .nav-bar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100vh;
-            width: 80px;
-            background: var(--bg-secondary);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2rem 0;
-            z-index: 100;
-        }
+    .nav-bar {
+      position: fixed;
+      left: 0;
+      top: 0;
+      height: 100vh;
+      width: 80px;
+      background: var(--bg-secondary);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 2rem 0;
+      z-index: 100;
+    }
 
-        .nav-bar a {
-            color: var(--text-secondary);
-            margin: 1rem 0;
-            font-size: 1.5rem;
-            transition: color 0.3s;
-        }
+    .nav-bar a {
+      color: var(--text-secondary);
+      margin: 1rem 0;
+      font-size: 1.5rem;
+      transition: color 0.3s;
+    }
 
-        .nav-bar a:hover {
-            color: var(--accent);
-        }
+    .nav-bar a:hover {
+      color: var(--accent);
+    }
 
-        .main-content {
-            margin-left: 80px;
-            padding: 2rem 4rem;
-        }
+    .main-content {
+      margin-left: 80px;
+      padding: 2rem 4rem;
+    }
 
-        .header {
-            padding: 2rem 0;
-            position: relative;
-            overflow: hidden;
-        }
+    .header {
+      padding: 2rem 0;
+      position: relative;
+    }
 
-        .header h1 {
-            font-size: 4rem;
-            font-weight: 700;
-            background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 1rem;
-        }
+    .header h1 {
+      font-size: 4rem;
+      font-weight: 700;
+      background: linear-gradient(45deg, var(--gradient-start), var(--gradient-end));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 1rem;
+    }
 
-        /* Enhanced Clock Design */
-        .clock-container {
-            position: absolute;
-            top: 20px;
-            right: 40px;
-            background: rgba(255, 255, 255, 0.1);
-            padding: 1.5rem 2.5rem;
-            border-radius: 20px;
-            backdrop-filter: blur(10px);
-            border: 2px solid rgba(255, 255, 255, 0.15);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-        }
+    .clock-container {
+      position: absolute;
+      top: 20px;
+      right: 40px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 1.5rem 2.5rem;
+      border-radius: 20px;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255, 255, 255, 0.15);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+    }
 
-        #live-clock {
-            font-size: 1.4rem;
-            font-weight: 600;
-            color: var(--text-primary);
-            text-align: center;
-            line-height: 1.8;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        }
+    #live-clock {
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: var(--text-primary);
+      text-align: center;
+      line-height: 1.8;
+    }
 
-        .section {
-            background: var(--bg-secondary);
-            border-radius: 20px;
-            padding: 2rem;
-            margin: 2rem 0;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
+    .section {
+      background: var(--bg-secondary);
+      border-radius: 20px;
+      padding: 2rem;
+      margin: 2rem 0;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
 
-        .section h2 {
-            color: var(--text-primary);
-            font-size: 1.8rem;
-            margin-bottom: 1.5rem;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
+    .section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+    }
 
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 1rem;
-        }
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 1rem;
+    }
 
-        .skill-item {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 1rem;
-            border-radius: 12px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: transform 0.3s, background 0.3s;
-        }
+    .skill-item {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1rem;
+      border-radius: 12px;
+      text-align: center;
+    }
 
-        .skill-item:hover {
-            transform: translateY(-5px);
-            background: rgba(255, 255, 255, 0.08);
-        }
+    .experience-item, .project-item {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1.5rem;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+    }
 
-        .experience-item {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 1.5rem;
-            border-radius: 12px;
-            margin-bottom: 1rem;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
+    .contact-info {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1rem;
+    }
 
-        .experience-item h3 {
-            color: var(--accent);
-            margin-bottom: 0.5rem;
-        }
+    .contact-item {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 1rem;
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
 
-        .experience-item p {
-            color: var(--text-secondary);
-        }
+    .contact-item a {
+      color: var(--text-primary);
+      text-decoration: none;
+    }
 
-        .experience-item ul {
-            list-style: none;
-            margin-top: 0.5rem;
-            color: var(--text-secondary);
-        }
+    @media (max-width: 768px) {
+      .nav-bar {
+        width: 60px;
+      }
 
-        .experience-item ul li {
-            margin-left: 1rem;
-            position: relative;
-            padding: 0.25rem 0;
-        }
+      .main-content {
+        margin-left: 60px;
+      }
 
-        .experience-item ul li::before {
-            content: "•";
-            color: var(--accent);
-            position: absolute;
-            left: -1rem;
-        }
+      .header h1 {
+        font-size: 3rem;
+      }
 
-        .contact-info {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-        }
-
-        .contact-item {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 1rem;
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            transition: transform 0.3s, background 0.3s;
-        }
-
-        .contact-item:hover {
-            transform: translateY(-3px);
-            background: rgba(255, 255, 255, 0.08);
-        }
-
-        .contact-item span {
-            font-size: 1.5rem;
-        }
-
-        .contact-item a {
-            color: var(--text-primary);
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .contact-item a:hover {
-            color: var(--accent);
-        }
-
-        .contact-item p {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 768px) {
-            .nav-bar {
-                width: 60px;
-            }
-            .main-content {
-                margin-left: 60px;
-                padding: 2rem;
-            }
-            .header h1 {
-                font-size: 3rem;
-            }
-            .clock-container {
-                right: 20px;
-                padding: 1rem 2rem;
-            }
-            #live-clock {
-                font-size: 1.1rem;
-            }
-        }
-    </style>
+      .clock-container {
+        right: 20px;
+        padding: 1rem 2rem;
+      }
+    }
+  </style>
 </head>
 <body>
-    <nav class="nav-bar">
-        <a href="#home">🏠</a>
-        <a href="#skills">💡</a>
-        <a href="#experience">💼</a>
-        <a href="#education">🎓</a>
-        <a href="#contact">📧</a>
-    </nav>
+  <nav class="nav-bar">
+    <a href="#home">🏠</a>
+    <a href="#skills">💡</a>
+    <a href="#experience">💼</a>
+    <a href="#projects">📂</a>
+    <a href="#courses">📘</a>
+    <a href="#contact">📧</a>
+  </nav>
 
-    <main class="main-content">
-        <header class="header" id="home">
-            <div class="clock-container">
-                <div id="live-clock"></div>
-            </div>
-            <h1>Jaishak J</h1>
-            <p>Adaptable and Passionate Learner | AI & ML Developer | Data Scientist</p>
-        </header>
+  <main class="main-content">
+    <header class="header" id="home">
+      <div class="clock-container">
+        <div id="live-clock"></div>
+      </div>
+      <h1>Jaishak J</h1>
+      <p>Adaptable and Passionate Learner | AI & ML Developer | Data Scientist</p>
+    </header>
 
-        <section class="section" id="skills">
-            <h2>✨ Skills</h2>
-            <div class="skills-grid">
-                <div class="skill-item">Python | Java | SQL | C++</div>
-                <div class="skill-item">AI & ML Model Development</div>
-                <div class="skill-item">Problem-Solving</div>
-                <div class="skill-item">Linux</div>
-            </div>
-        </section>
+    <section class="section" id="skills">
+      <h2>✨ Skills</h2>
+      <div class="skills-grid">
+        <div class="skill-item">Python</div>
+        <div class="skill-item">JavaScript</div>
+        <div class="skill-item">HTML</div>
+        <div class="skill-item">TypeScript</div>
+        <div class="skill-item">Linux</div>
+        <div class="skill-item">AI & ML</div>
+      </div>
+    </section>
 
-        <section class="section" id="experience">
-            <h2>💼 Experience</h2>
-            <div class="experience-item">
-                <h3>Accenture - The Forage</h3>
-                <p>Data Analytics and Visualization Virtual Experience Program</p>
-                <ul>
-                    <li>Data Preprocessing</li>
-                    <li>Data Modeling</li>
-                    <li>Model Presentation</li>
-                </ul>
-            </div>
-            <div class="experience-item">
-                <h3>Retech Solution Pvt Ltd</h3>
-                <p>Machine Learning Intern</p>
-                <ul>
-                    <li>Foundations of Machine Learning</li>
-                    <li>Supervised and Unsupervised Learning</li>
-                    <li>Neural Networks</li>
-                    <li>Advanced Topics in ML</li>
-                </ul>
-            </div>
-        </section>
+    <section class="section" id="experience">
+      <h2>💼 Experience</h2>
+      <div class="experience-item">
+        <h3>Machine Learning Intern — Retech Solutions</h3>
+        <p>Aug 2023 – Sep 2023 | Chennai</p>
+        <ul>
+          <li>Worked on real-world ML projects</li>
+          <li>Hands-on with Python, TensorFlow, scikit-learn</li>
+        </ul>
+      </div>
+      <div class="experience-item">
+        <h3>Social Media Marketing Intern — GEEKSGOD</h3>
+        <p>Dec 2021 – Feb 2022 | Bhopal</p>
+        <ul>
+          <li>Executed brand engagement strategies</li>
+          <li>Managed content creation and analytics</li>
+        </ul>
+      </div>
+    </section>
 
-        <section class="section" id="education">
-            <h2>🎓 Education</h2>
-            <div class="experience-item">
-                <h3>Bachelor of Technology (2021-2025)</h3>
-                <p>Jeppiaar Institute of Technology, Artificial Intelligence and Data Science</p>
-            </div>
-            <div class="experience-item">
-                <h3>Higher Secondary School (2020-2021)</h3>
-                <p>Pius XI HSC, Thoothoor - 71% scored</p>
-            </div>
-            <div class="experience-item">
-                <h3>Secondary School (2018-2019)</h3>
-                <p>St. Joseph High School, Karunyapuram - 68% scored</p>
-            </div>
-        </section>
+    <section class="section" id="projects">
+      <h2>📂 Projects</h2>
+      <div class="project-item">
+        <h3>AI-Powered Video Summarisation Using YOLOv5</h3>
+        <p>Dec 2024 – Apr 2025</p>
+        <p>Developed an LLM-powered chatbot that reduced support response time by 50%, enhancing user engagement and recommendation quality.</p>
+      </div>
+    </section>
 
-        <section class="section" id="contact">
-            <h2>📧 Contact</h2>
-            <div class="contact-info">
-                <div class="contact-item">
-                    <span>📱</span>
-                    <a href="tel:+919345589347">+91 9345589347</a>
-                </div>
-                <div class="contact-item">
-                    <span>📧</span>
-                    <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
-                </div>
-                <div class="contact-item">
-                    <span>📍</span>
-                    <p>Poothurai, Vilavancode, Kanniyakumari, 629176</p>
-                </div>
-                <div class="contact-item">
-                    <span>💼</span>
-                    <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedin.com/in/jaishakj</a>
-                </div>
-            </div>
-        </section>
-    </main>
+    <section class="section" id="courses">
+      <h2>📘 Courses</h2>
+      <ul>
+        <li>Joy of Computing with Python – NPTEL (Feb 2022 – Oct 2022)</li>
+        <li>MS Office – Naan Mudhalvan (Nov 2023 – Jun 2024)</li>
+        <li>Network Essentials – Naan Mudhalvan (Jul 2024 – Oct 2024)</li>
+      </ul>
+    </section>
 
-    <script>
-        function updateClock() {
-            const now = new Date();
-            const options = {
-                timeZone: 'Asia/Kolkata',
-                hour12: true,
-                hour: 'numeric',
-                minute: '2-digit',
-                second: '2-digit',
-                weekday: 'short',
-                day: 'numeric',
-                month: 'short'
-            };
-            
-            const formatter = new Intl.DateTimeFormat('en-IN', options);
-            const parts = formatter.formatToParts(now);
-            
-            const timeParts = {};
-            parts.forEach(part => {
-                timeParts[part.type] = part.value;
-            });
+    <section class="section" id="contact">
+      <h2>📧 Contact</h2>
+      <div class="contact-info">
+        <div class="contact-item">
+          <span>📱</span>
+          <a href="tel:+919345589347">+91 9345589347</a>
+        </div>
+        <div class="contact-item">
+          <span>📧</span>
+          <a href="mailto:jaishak1219@gmail.com">jaishak1219@gmail.com</a>
+        </div>
+        <div class="contact-item">
+          <span>💼</span>
+          <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedin.com/in/jaishakj</a>
+        </div>
+        <div class="contact-item">
+          <span>🌐</span>
+          <a href="https://github.com/jaishakj" target="_blank">github.com/jaishakj</a>
+        </div>
+      </div>
+    </section>
+  </main>
 
-            document.getElementById('live-clock').innerHTML = `
-                ${timeParts.weekday}<br>
-                ${timeParts.day} ${timeParts.month}<br>
-                ${timeParts.hour}:${timeParts.minute}:${timeParts.second}<br>
-                ${timeParts.dayPeriod} IST
-            `;
-        }
+  <script>
+    function updateClock() {
+      const now = new Date();
+      const options = {
+        timeZone: 'Asia/Kolkata',
+        hour12: true,
+        hour: 'numeric',
+        minute: '2-digit',
+        second: '2-digit',
+        weekday: 'short',
+        day: 'numeric',
+        month: 'short'
+      };
 
-        updateClock();
-        setInterval(updateClock, 1000);
-    </script>
+      const formatter = new Intl.DateTimeFormat('en-IN', options);
+      const parts = formatter.formatToParts(now);
+      const timeParts = {};
+      parts.forEach(part => {
+        timeParts[part.type] = part.value;
+      });
+
+      document.getElementById('live-clock').innerHTML = `
+        ${timeParts.weekday}<br>
+        ${timeParts.day} ${timeParts.month}<br>
+        ${timeParts.hour}:${timeParts.minute}:${timeParts.second} ${timeParts.dayPeriod} IST
+      `;
+    }
+
+    updateClock();
+    setInterval(updateClock, 1000);
+  </script>
 </body>
 </html>
