--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Full HTML code -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,20 +16,17 @@
       --gradient-start: #DFB6B2;
       --gradient-end: #FBE4D8;
     }
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     body {
       font-family: 'Poppins', sans-serif;
       background-color: var(--bg-primary);
       color: var(--text-primary);
       min-height: 100vh;
     }
-
     .nav-bar {
       position: fixed;
       left: 0;
@@ -42,28 +40,23 @@
       padding: 2rem 0;
       z-index: 100;
     }
-
     .nav-bar a {
       color: var(--text-secondary);
       margin: 1rem 0;
       font-size: 1.5rem;
       transition: color 0.3s;
     }
-
     .nav-bar a:hover {
       color: var(--accent);
     }
-
     .main-content {
       margin-left: 80px;
       padding: 2rem 4rem;
     }
-
     .header {
       padding: 2rem 0;
       position: relative;
     }
-
     .header h1 {
       font-size: 4rem;
       font-weight: 700;
@@ -72,7 +65,6 @@
       -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
     }
-
     .clock-container {
       position: absolute;
       top: 20px;
@@ -84,7 +76,6 @@
       border: 2px solid rgba(255, 255, 255, 0.15);
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     }
-
     #live-clock {
       font-size: 1.4rem;
       font-weight: 600;
@@ -92,7 +83,6 @@
       text-align: center;
       line-height: 1.8;
     }
-
     .section {
       background: var(--bg-secondary);
       border-radius: 20px;
@@ -100,38 +90,32 @@
       margin: 2rem 0;
       border: 1px solid rgba(255, 255, 255, 0.1);
     }
-
     .section h2 {
       font-size: 1.8rem;
       margin-bottom: 1.5rem;
     }
-
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
       gap: 1rem;
     }
-
     .skill-item {
       background: rgba(255, 255, 255, 0.05);
       padding: 1rem;
       border-radius: 12px;
       text-align: center;
     }
-
     .experience-item, .project-item {
       background: rgba(255, 255, 255, 0.05);
       padding: 1.5rem;
       border-radius: 12px;
       margin-bottom: 1rem;
     }
-
     .contact-info {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1rem;
     }
-
     .contact-item {
       background: rgba(255, 255, 255, 0.05);
       padding: 1rem;
@@ -140,25 +124,20 @@
       align-items: center;
       gap: 1rem;
     }
-
     .contact-item a {
       color: var(--text-primary);
       text-decoration: none;
     }
-
     @media (max-width: 768px) {
       .nav-bar {
         width: 60px;
       }
-
       .main-content {
         margin-left: 60px;
       }
-
       .header h1 {
         font-size: 3rem;
       }
-
       .clock-container {
         right: 20px;
         padding: 1rem 2rem;
@@ -173,6 +152,7 @@
     <a href="#experience">💼</a>
     <a href="#projects">📂</a>
     <a href="#courses">📘</a>
+    <a href="#education">🎓</a>
     <a href="#contact">📧</a>
   </nav>
 
@@ -222,7 +202,7 @@
       <div class="project-item">
         <h3>AI-Powered Video Summarisation Using YOLOv5</h3>
         <p>Dec 2024 – Apr 2025</p>
-        <p>Developed an LLM-powered chatbot that reduced support response time by 50%, enhancing user engagement and recommendation quality.</p>
+        <p>LLM chatbot reduced support time by 50% using video summaries & recommendation systems.</p>
       </div>
     </section>
 
@@ -233,6 +213,15 @@
         <li>MS Office – Naan Mudhalvan (Nov 2023 – Jun 2024)</li>
         <li>Network Essentials – Naan Mudhalvan (Jul 2024 – Oct 2024)</li>
       </ul>
+    </section>
+
+    <section class="section" id="education">
+      <h2>🎓 Education</h2>
+      <div class="experience-item">
+        <h3>B.Tech — Artificial Intelligence and Data Science</h3>
+        <p>Jeppiaar Institute of Technology | Anna University (2021–2025)</p>
+        <p>CGPA: 7.38</p>
+      </div>
     </section>
 
     <section class="section" id="contact">
@@ -271,21 +260,16 @@
         day: 'numeric',
         month: 'short'
       };
-
       const formatter = new Intl.DateTimeFormat('en-IN', options);
       const parts = formatter.formatToParts(now);
       const timeParts = {};
-      parts.forEach(part => {
-        timeParts[part.type] = part.value;
-      });
-
+      parts.forEach(part => { timeParts[part.type] = part.value; });
       document.getElementById('live-clock').innerHTML = `
         ${timeParts.weekday}<br>
         ${timeParts.day} ${timeParts.month}<br>
         ${timeParts.hour}:${timeParts.minute}:${timeParts.second} ${timeParts.dayPeriod} IST
       `;
     }
-
     updateClock();
     setInterval(updateClock, 1000);
   </script>
