--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
         <div id="live-clock"></div>
       </div>
       <h1>Jaishak J</h1>
-      <p>Adaptable and Passionate Learner | AI & ML Developer | Data Scientist</p>
+      <p>AI Engineer | Data Scientist | Full-Stack Developer</p>
+      <p>Adaptable and Passionate Learner</p>
     </header>
 
     <section class="section" id="skills">
@@ -189,7 +190,7 @@
       </div>
       <div class="experience-item">
         <h3>Social Media Marketing Intern — GEEKSGOD</h3>
-        <p>Dec 2021 – Feb 2022 | Bhopal</p>
+        <p>Dec 2021 – Feb 2022 | Bhopal (Remote)</p>
         <ul>
           <li>Executed brand engagement strategies</li>
           <li>Managed content creation and analytics</li>
@@ -237,11 +238,11 @@
         </div>
         <div class="contact-item">
           <span>💼</span>
-          <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedin.com/in/jaishakj</a>
+          <a href="https://www.linkedin.com/in/jaishakj" target="_blank">linkedIn</a>
         </div>
         <div class="contact-item">
           <span>🌐</span>
-          <a href="https://github.com/jaishakj" target="_blank">github.com/jaishakj</a>
+          <a href="https://github.com/jaishakj" target="_blank">Github</a>
         </div>
       </div>
     </section>
