--- a/index.html
+++ b/index.html
@@ -170,11 +170,14 @@
       <h2>✨ Skills</h2>
       <div class="skills-grid">
         <div class="skill-item">Python</div>
+        <div class="skill-item">Artificial Intelligence</div>
         <div class="skill-item">JavaScript</div>
-        <div class="skill-item">HTML</div>
+        <div class="skill-item">HTML/ CSS</div>
+        
         <div class="skill-item">TypeScript</div>
+        <div class="skill-item">Data Science</div>
         <div class="skill-item">Linux</div>
-        <div class="skill-item">AI & ML</div>
+        <div class="skill-item">AI / ML</div>
       </div>
     </section>
 
