--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Jaishak's Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --bg-primary: #190019;
@@ -331,6 +331,7 @@
         <h1>Jaishak J</h1>
         <p>AI Engineer | Data Scientist | Full-Stack Developer</p>
         <p>Adaptable and Passionate Learner</p>
+        <p> 📍 Chennai, India (Open Remote/ Relocation)</p>
       </div>
       <div class="clock-container">
         <div id="live-clock"></div>
